# RLSDKPlugin4n00bz

./: CMakeLists.txt  CMakePresets.json  README.md
scripts/: install.bat
src/: Cvars.hpp  GuiBase.cpp  GuiBase.h  HookManager.hpp  PluginTemplate.cpp  PluginTemplate.hpp  PluginTemplate.rc  SettingsGUI.cpp  pch.h
